tests/sksl/errors/Ossfuzz38106.glsl
### Compilation failed:

error: 1: expected identifier, but found ';'
error: 1: expected field name or swizzle mask after '.'
error: 2: expected ';', but found ''
3 errors
